--- a/Doc/FACE_soilpH_DryVsFresh.Rmd
+++ b/Doc/FACE_soilpH_DryVsFresh.Rmd
@@ -45,23 +45,19 @@ p + geom_point() +
 m1 <- lm(fresh ~ dry + I(dry^2), data = DryphCst)
 m2 <- lm(fresh ~ dry, data = DryphCst)
 anova(m1, m2)
-# no significant difference so just use 1st polynomial
-# (linear)
+# no significant difference so just use 1st polynomial (linear)
 anova(m2)
 summary(m2)
 
-# Are Iterecept and slope significantly different than 0 and
-# 1, respecitively? Looking at standard error for estimates,
-# probably not. But test anyway.
+# Are Iterecept and slope significantly different than 0 and 1, respecitively?
+# Looking at standard error for estimates, probably not. But test anyway.
 
-# Actual value (fresh pH) - Predicted valu where a = 0 & b =
-# 1
+# Actual value (fresh pH) - Predicted valu where a = 0 & b = 1
 DryphCst$Diff <- DryphCst$fresh - DryphCst$dry
 m1 <- lm(Diff ~ dry, data = DryphCst)
 summary(m1)
-# Intercept and slope are significantly different than 0, so
-# that a and b are not 0 and 1, respectively. (also look at
-# the grpah below)
+# Intercept and slope are significantly different than 0, so that a and b are
+# not 0 and 1, respectively. (also look at the grpah below)
 ```
 
 
